tests/ui/consts/const_cmp_type_id.stderr
error[E0277]: the trait bound `TypeId: const PartialOrd` is not satisfied
  --> $DIR/const_cmp_type_id.rs:11:18
   |
LL |         let _a = TypeId::of::<u8>() < TypeId::of::<u16>();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
